# business_finder

./: CLAUDE.md  Dockerfile.scraper  README.md  ofelia.ini  pyproject.toml
docs/: ARCHITECTURE.md  BUSINESS_BROKERS.md  OBJECTIVE.md  SAAS_BROKERS.md  SCORING_FRAMEWORK.md
scripts/: entrypoint.sh  explore_microns.py  refresh_acquire.sh  refresh_flippa.sh  refresh_microns.sh  run_acquire_scrape.py  run_flippa_scrape.py  run_microns_scrape.py  test_microns_scraper.py
scripts/dev/: explore_flippa.py
src/business_finder/: __init__.py  config.py
src/business_finder/db/: __init__.py  operations.py  schema.py
src/business_finder/models/: __init__.py  listing.py
src/business_finder/scrapers/: README.md  __init__.py  acquire.py  base.py  flippa.py  microns.py
tests/: test_db.py  test_models.py
