[project]
name = "business-finder"
version = "0.1.0"
description = "Business listing aggregator and scorer"
authors = [
    {name = "Dale"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "playwright (>=1.57.0,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "sqlite-utils (>=3.39,<4.0)",
    "rich (>=14.2.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"

[tool.poetry]
packages = [{include = "business_finder", from = "src"}]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

